# Jarvis-Agent

./: .gitignore  README.md  pyproject.toml
docs/: AGENT_EVENT_PROTOCOL.md  ARCHITECTURE.md  CODEBASE_INDEX_DESIGN.md  DESIGN.md  FINE_TUNING_DATA.md  MLX_QWEN3_CODER_SETUP.md  ROADMAP.md  TECH_DESIGN.md  TUI_DESIGN.md  TUI_udpate_plan.md
docs/adr/: 0001-tui-refactor-pure-view-event-protocol.md
docs/refactor/: M0_RUNTIME_TYPES.md  PHASE_1_package_split.md  PHASE_2_output_subsystem.md  PHASE_3_view_module_extraction.md  PHASE_4_cleanup_tests.md  TUI_CHECKPOINT_2026-07-03.md
docs/reviews/: 2026-07-02-claude-code-from-scratch.md
examples/: hep-config.yaml  jarvis-agent.toml
examples/datasets/: hep_instruction_sample.jsonl
scripts/: verify_tui_parity.py
src/jarvis_agent/: __init__.py  __main__.py  agent_actions.py  branding.py  cli.py  config.py  session.py  textual_tui.py  tui.py
src/jarvis_agent/hep/: __init__.py  prompts.py  yaml_assistant.py
src/jarvis_agent/model/: __init__.py  base.py  mlx.py
src/jarvis_agent/project/: __init__.py  extractor.py  indexer.py  parser.py
src/jarvis_agent/protocol/: __init__.py  bus.py  events.py
src/jarvis_agent/runtime/: __init__.py  backend.py  types.py
src/jarvis_agent/textual_tui/: __init__.py  animation.py  app.py  composer.py  errors.py  (+5 more)
tests/: test_branding.py  test_config.py  test_indexer.py  test_mlx_backend.py  test_output_blocks.py  test_protocol.py  test_runtime_types.py  test_streaming.py  test_textual_phase3_modules.py  test_training.py  test_transcript.py  test_tui.py  test_yaml_assistant.py
(+12 files in other folders)
